# boltz

./: .gitignore  Cargo.toml  README.md  app.py  boltz.py  boltz_api.py  config.json  const.py  example.py  example_search.py  inc.py  main.py  makefile  models.py  pubspec.yaml  requirements.txt  run.py  server_config.py  serverconfig.py  setup.py  test.py  utils.py
android/app/: build.gradle
boltz_api/: __init__.py  boltz.py  inc.py  models.py
downloads/: Kordhell - Scopin.webm
examples/: example_download.py  example_search.py
instance/: items.db
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/data/: boltz_page_model.dart  player_controller_model.dart
lib/domain/: pages_service.dart  player_controller_service.dart
lib/layout/: boltz_bottom_mini_player.dart  boltz_navigation_bar.dart
lib/presentation/: downloads_page.dart  home_page.dart  playlist_page.dart  settings_page.dart
linux/: CMakeLists.txt  my_application.cc
spotify_dl/: __init__.py  constants.py  utils.py
src/: boltz.py  boltzUtil.py  boltz_api.py  boltz_api.spec  boltz_singlethread.py  boltz_types.py  boltz_util.py  cleanup.py  config.py  constants.py  imports.py  main.py  main.rs  progress.py  spotify.py  spotify_dl.py  sv_inc.py  sv_models.py  sv_types.py  sv_utils.py  util.py  youtube.py
src/api/: boltz.py  (+7 more)
static/: basic.css
templates/: about.html  base.html  convert.html  download.html  error.html  index.html  result.html  search.html  test.html  thankyou.html  upload.html
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+26 files in other folders)
